--- a/services.css
+++ b/services.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 * {
   font-family: "Inter", sans-serif;
-  overflow-x: hidden;
 }
 .hero-section-service {
   color: white;
